# opendera

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ENTERPRISE_FEATURES.md  LICENSE  README.md  openapi.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  test-integration-platform.yml  test.yml
crates/adapterlib/: Cargo.toml
crates/adapterlib/src/: catalog.rs  connector_metadata.rs  format.rs  preprocess.rs  transport.rs
crates/adapters/: Cargo.toml
crates/adapters/benches/: avro_encoder.rs  bench_common.rs  delta_encoder.rs  postgres_output.rs
crates/adapters/src/: adhoc.rs  catalog.rs  controller.rs  format.rs  integrated.rs  lib.rs  preprocess.rs  server.rs  test.rs  transport.rs  (+1 more)
crates/buffer-cache/: Cargo.toml  README.md
crates/datagen/: Cargo.toml
crates/dbsp/: Cargo.toml
crates/fda/: Cargo.toml
crates/fxp/: Cargo.toml
crates/iceberg/: Cargo.toml
crates/iceberg/src/: input.rs  lib.rs
crates/ir/: Cargo.toml
crates/nexmark/: Cargo.toml
crates/opendera-macros/: Cargo.toml
crates/opendera-observability/: Cargo.toml
crates/opendera-types/: Cargo.toml
crates/pipeline-manager/: Cargo.toml  build.rs
crates/rest-api/: Cargo.toml  build.rs
crates/samply/: Cargo.toml
crates/sqllib/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage-test-compat/: Cargo.toml
deploy/: Dockerfile  Dockerfile.cloud
docs.feldera.com/: docusaurus.config.ts
docs.feldera.com/docs/: changelog.md
js-packages/web-console/: README.md  vite.config.ts
sql-to-dbsp-compiler/: using.md
sql-to-dbsp-compiler/temp/: Cargo.toml
(+289 files in other folders)
